--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Meu portal de notícias</title>
     <link rel="stylesheet" href="./main.css" />
 </head>
-
+<link rel="stylesheet" href="./style.css">
 <body>
     <header>
         <h1>Meu portal de notícias</h1>
@@ -20,7 +20,7 @@
                     <a href="#economy" title="Ir para a seção de notícias">Economia</a>
                 </li>
                 <li>
-                    <a href="#dev" title="Ir para a seção de dev">Programadores</a>
+                    <a href="#devs" title="Ir para a seção de dev">Programadores</a>
                 </li>
                 <li>
                     <a href="#games" title="Ir para a seção de dev">Jogos</a>
@@ -29,7 +29,7 @@
         </nav>
     </header>
 
-    <section>
+    <section id="sports">
         <h2>Esportes</h2>
         <article>
             <img src="./imagens/futebol.jpg" alt="Bola de futebol no gramado" />
@@ -77,7 +77,7 @@
             <a href="#" title="Leia a notícia completa">Ler mais</a>
         </article>
     </section>
-    <section>
+    <section id="economy">
         <h2>Economia</h2>
         <article>
             <img src="./imagens/dolares.jpg" alt="Muitos dólares" />
@@ -115,7 +115,7 @@
         </article>
     </section>
 
-    <section>
+    <section id="devs">
         <h2>Programadores</h2>
         <article>
             <article>
@@ -138,7 +138,7 @@
             </article>
     </section>
 
-    <section>
+    <section id="games">
         <h2>Jogos</h2>
         <article>
             <img src="./imagens/temer-ps4-xbo.jpg" alt="Temer com controles">
