--- a/index.html
+++ b/index.html
@@ -10,153 +10,169 @@
 <link rel="stylesheet" href="./style.css">
 <body>
     <header>
-        <h1>Meu portal de notícias</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#sports" title="Ir para a seção de esportes">Esportes</a>
-                </li>
-                <li>
-                    <a href="#economy" title="Ir para a seção de notícias">Economia</a>
-                </li>
-                <li>
-                    <a href="#devs" title="Ir para a seção de dev">Programadores</a>
-                </li>
-                <li>
-                    <a href="#games" title="Ir para a seção de dev">Jogos</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>Meu portal de notícias</h1>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#sports" title="Ir para a seção de esportes">Esportes</a>
+                    </li>
+                    <li>
+                        <a href="#economy" title="Ir para a seção de notícias">Economia</a>
+                    </li>
+                    <li>
+                        <a href="#devs" title="Ir para a seção de dev">Programadores</a>
+                    </li>
+                    <li>
+                        <a href="#games" title="Ir para a seção de dev">Jogos</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <section id="sports">
-        <h2>Esportes</h2>
-        <article>
-            <img src="./imagens/futebol.jpg" alt="Bola de futebol no gramado" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Grande clássico na noite de hoje</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="./imagens/futebol-americano.jpg" alt="Jogador de futebol americano correndo com a bola na mão" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Noite do Superbowl</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="./imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Notícia sobre a NBA</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
+        <div class="containers">
+            <h2>Esportes</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/futebol.jpg" alt="Bola de futebol no gramado" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Grande clássico na noite de hoje</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/futebol-americano.jpg" alt="Jogador de futebol americano correndo com a bola na mão" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Noite do Superbowl</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Notícia sobre a NBA 2</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
 
-        <article>
-            <img src="./imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Notícia sobre a NBA</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
+                <article>
+                    <img src="./imagens/basquete.jpg" title="Vista aérea de uma quadra de basquete" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Notícia sobre a NBA</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article> 
+            </div>
+        </div>
     </section>
     <section id="economy">
-        <h2>Economia</h2>
-        <article>
-            <img src="./imagens/dolares.jpg" alt="Muitos dólares" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Dólar em alta de 0.50%</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-
-        <article>
-            <img src="./imagens/euro.jpg" alt="Várias notas de euro" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Euro em queda de 0.40%</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="./imagens/petroleo.jpg" alt="Extração de petróleo" />
-            <header>
-                <time>13/07/2022 às 12:35</time>
-            </header>
-            <h3>Alta no preço do barril do petróleo</h3>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
-            </p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
+        <div class="container">
+            <h2>Economia</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/dolares.jpg" alt="Muitos dólares" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Dólar em alta de 0.50%</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+        
+                <article>
+                    <img src="./imagens/euro.jpg" alt="Várias notas de euro" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Euro em queda de 0.40%</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/petroleo.jpg" alt="Extração de petróleo" />
+                    <header>
+                        <time>13/07/2022 às 12:35</time>
+                    </header>
+                    <h3>Alta no preço do barril do petróleo</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur consequuntur doloremque totam labore architecto. Corporis adipisci optio placeat quibusdam totam iure veritatis quam, ullam tenetur error? Laborum, modi itaque. Sunt.
+                    </p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+            </div>
+        </div>
     </section>
 
     <section id="devs">
-        <h2>Programadores</h2>
-        <article>
-            <article>
-            <img src="./imagens/software-developer-6521720-960-720.jpg" alt="Programador">
-            <header>
-                <time>28/02/2023 às 13:45</time>
-            </header>
-            <h3>As vagas aumentaram 30%</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere quam dicta, quisquam illo odio velit, corrupti eveniet fuga accusamus, atque minima sapiente? Nostrum pariatur molestiae minus? Voluptatem temporibus neque autem.</p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-            </article>
-        <article>
-            <img src="./imagens/programador-no-exterior-oportunidades-1024x683.jpg.optimal.jpg" alt="Programador">
-            <header>
-                <time>28/02/2023 às 15:07</time>
-            </header>
-            <h3>Novas oportunidades de vagas no exterior</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere quam dicta, quisquam illo odio velit, corrupti eveniet fuga accusamus, atque minima sapiente? Nostrum pariatur molestiae minus? Voluptatem temporibus neque autem.</p>    
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-            </article>
+        <div class="container">
+                <h2>Programadores</h2>
+            <div class="articles">
+                    <article>
+                    <img src="./imagens/software-developer-6521720-960-720.jpg" alt="Programador">
+                    <header>
+                        <time>28/02/2023 às 13:45</time>
+                    </header>
+                    <h3>As vagas aumentaram 30%</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere quam dicta, quisquam illo odio velit, corrupti eveniet fuga accusamus, atque minima sapiente? Nostrum pariatur molestiae minus? Voluptatem temporibus neque autem.</p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    </article>
+                <article>
+                    <img src="./imagens/programador-no-exterior-oportunidades-1024x683.jpg.optimal.jpg" alt="Programador">
+                    <header>
+                        <time>28/02/2023 às 15:07</time>
+                    </header>
+                    <h3>Novas oportunidades de vagas no exterior</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere quam dicta, quisquam illo odio velit, corrupti eveniet fuga accusamus, atque minima sapiente? Nostrum pariatur molestiae minus? Voluptatem temporibus neque autem.</p>    
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                    </article>
+            </div>
+            </div>
     </section>
 
     <section id="games">
-        <h2>Jogos</h2>
-        <article>
-            <img src="./imagens/temer-ps4-xbo.jpg" alt="Temer com controles">
-            <header>
-                <time>01/03/2023 as 20:36</time>
-            </header>
-            <h3>Governo tributará jogos eletrônicos</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, tenetur? Suscipit nihil odio ad magnam cupiditate beatae possimus, exercitationem impedit laborum. Ipsam, aliquam ad ea corporis aliquid neque odio mollitia?</p>
-                <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-        <article>
-            <img src="./imagens/Sem-Titulo-1-1-900x503.jpg" alt="Semana do Consumidor">
-            <header>01/03/2023 as 21:38</header>
-            <h3>PS Store: Semana do Consumidor</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatem accusantium ad id, soluta blanditiis! Debitis numquam perferendis, quia dolore illum nam aspernatur corporis, culpa ratione ipsam magnam doloribus in!</p>
-            <a href="#" title="Leia a notícia completa">Ler mais</a>
-        </article>
-
+        <div class="container">
+                <h2>Jogos</h2>
+            <div class="articles">
+                <article>
+                    <img src="./imagens/temer-ps4-xbo.jpg" alt="Temer com controles">
+                    <header>
+                        <time>01/03/2023 as 20:36</time>
+                    </header>
+                    <h3>Governo tributará jogos eletrônicos</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, tenetur? Suscipit nihil odio ad magnam cupiditate beatae possimus, exercitationem impedit laborum. Ipsam, aliquam ad ea corporis aliquid neque odio mollitia?</p>
+                        <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+                <article>
+                    <img src="./imagens/Sem-Titulo-1-1-900x503.jpg" alt="Semana do Consumidor">
+                    <header>01/03/2023 as 21:38</header>
+                    <h3>PS Store: Semana do Consumidor</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptatem accusantium ad id, soluta blanditiis! Debitis numquam perferendis, quia dolore illum nam aspernatur corporis, culpa ratione ipsam magnam doloribus in!</p>
+                    <a href="#" title="Leia a notícia completa">Ler mais</a>
+                </article>
+            </div>
+        </div>
 
 
     </section>
